--- a/src/pages/users/UserPage.css
+++ b/src/pages/users/UserPage.css
@@ -30,20 +30,24 @@
 
 .filter-container {
     position: relative;
+} 
+
+.search-container { 
+   background-color: #f9f9f9ea;
 }
 
 .filter-dropdown {
     position: absolute;
     /* top: 30px; */
     left: 0;
-    background-color: white;
+    background-color: #f9f9f9ea;
     border: 1px solid #ccc;
     z-index: 1;
 }
 
 button {
     padding: 8px 16px;
-    background-color: white;
+    background-color:#f9f9f9ea;
     color: black;
     cursor: pointer;
     border: 1px solid black;
