--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,10 @@
   padding: 20px;
 }
 
+section
+{ 
+  background-color: #fff;
+}
 /* Hero Section */
 .hero-section {
   padding: 40px 0;
@@ -342,6 +346,7 @@
 .header-left {
   flex: 1;
 }
+
 
 .header-title {
   margin: 0;
